Added an error check for charset conversion result for mail folder creation, patch by mkaply@us.ibm.com, bug 156336, r=naving, sr=bienvenu.